--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://prashant:RbZhgAXkd1YF9O9I@prashant-cluster.a3uiuae.mongodb.net/url-shortener/url
+MONGODB_URI=
 BASE_URL=http://34.204.42.34/5000
 FRONTEND_URL=http://34.204.42.34/3000
